<resources>
	<string name="title_cpu">CPU Tweaks</string>
    <string name="title_governor">Governor Settings</string>
    <string name="title_tis">Times In State</string>
    <string name="title_voltage">Voltage</string>
    <string name="title_gpu">GPU Tweaks</string>
    <string name="title_misc">Misc Tweaks</string>
    <string name="title_profiles">Profiles</string>
    <string name="title_mpdecision">Mpdecision</string>
    <string name="title_thermald">Thermal</string>
    <string name="title_about">About</string>
    <string name="title_info">System Info</string>
    <string name="title_preferences">Settings</string>
    <string name="app_name">Kernel Tuner</string>
    <string name="oc">CPU Tweaks</string>
    <string name="task_manager">Task Manager</string>
    <string name="preferences_boot_settings">Boot Settings</string>
    <string name="preferences_boot_settings_apply_summary">Settings will be restored after reboot</string>
    <string name="preferences_boot_settings_apply_title">Restore Settings After Reboot</string>
    <string name="preferences_widget_settings">Widget Settings</string>
    <string name="preferences_widget_settings_interval_title">Widget Update Interval</string>
    <string name="preferences_widget_settings_interval_summary">Setting to low values will cause your battery to drain faster</string>
    <string name="preferences_misc">Misc</string>
    <string name="preferences_notification_toggle_title">CPU Usage</string>
    <string name="preferences_notification_toggle_summary">Enable cpu usage info in status bar</string>
    <string name="preferences_notification">Notifications</string>
    <string name="preferences_cpu">CPU</string>
    <string name="preferences_memory">Memory</string>
    <string name="preferences_misc_ads_title">Show ads</string>
        <string name="preferences_misc_ads_summary">You need to restart app to stop showing ads</string>
    <string name="preferences_misc_update_title">Auto Update Check</string>
	    <string name="preferences_misc_update_summary">Check for updates every time you start app</string>
      <string name="title_changelog">Changelog</string>
     <string name="title_check">Compatibility Check</string>
    <string name="activity_title_profile_editor">Profile Editor</string>
    <string name="anthrax"><a href="http://anthrax&#8211;kernels.us/forum/showthread.php?t=574">anthrax&#8211;kernels.us</a></string>
    <string name="xda"><a href="http://forum.xda&#8211;developers.com/showthread.php?t=1719934">xda&#8211;developers.com</a></string>
    <string name="official"><a href="http://kerneltuner.pedjaapps.in.rs/">Official Website</a></string>
<string name="mail"><a href="mailto:predragcokulov@gmail.com">Send me Mail</a></string>
    <string name="copyright_cokulov_predrag_2012">Copyright © Čokulov Predrag 2012</string>
    <string name="about_faq_and_support">FAQ and Support:</string>
    <string name="activity_check_scaling_available_frequencies">scaling_available_frequencies…</string>
    <string name="activity_check_undervolting_">Undervolting…</string>
    <string name="activity_check_time_in_state_">Time in State…</string>
    <string name="activity_check_led_notification_timeout_">LED Notification Timeout…</string>
    <string name="activity_check_capacitive_buttons_backlight_">Capacitive Buttons Backlight…</string>
    <string name="activity_check_gpu_3d_overclocking_">GPU 3D Overclocking…</string>
    <string name="activity_check_gpu_2d_overclocking">GPU 2D Overclocking</string>
    <string name="activity_check_fastcharge_">Fastcharge…</string>
    <string name="activity_check_vsync_">Vsync…</string>
    <string name="activity_check_color_depth_">Color Depth…</string>
    <string name="activity_check_f_sync_">f/sync…</string>
    <string name="activity_check_sweep2wake_">Sweep2Wake…</string>
    <string name="activity_check_thermald_">Thermal…</string>
    <string name="activity_check_mpdecision_">Mpdecision…</string>
    <string name="activity_check_sdcache_">sdcache&#8230;.</string>
    <string name="activity_check_io_scheduler_">IO Scheduler…</string>
    <string name="activity_check_your_device_is_">"Your device is "</string>
    <string name="activity_check_compatible_">" compatible!"</string>
     <string name="activity_main_cpu_temp_">CPU Temp:</string>
    <string name="n_a">n/a</string>
    <string name="activity_main__battery_temp_">" Batt. Tmp:"</string>
    <string name="activity_main__battery_level_">" Battery:"</string>
    <string name="cpu0">CPU0</string>
    <string name="cpu1">CPU1</string>
    <string name="offline">offline</string>
    <string name="cpu2">CPU2</string>
    <string name="cpu3">CPU3</string>
    <string name="info_">Info:</string>
    <string name="cpu0_min_freq_">CPU0 min freq:</string>
    <string name="cpu0_max_freq_">CPU0 max freq:</string>
    <string name="cpu1_min_freq_">CPU1 min freq:</string>
    <string name="cpu2_min_freq_">CPU2 min freq:</string>
    <string name="cpu1_max_freq_">CPU1 max freq:</string>
    <string name="cpu2_max_freq_">CPU2 max freq:</string>
    <string name="cpu3_min_freq_">CPU3 min freq:</string>
    <string name="crtica">&#8211;</string>
    <string name="cpu3_max_freq_">CPU3 max freq:</string>
    <string name="fastcharge_status_">Fastcharge Status:</string>
    <string name="buttons_backlight">Capacitive Buttons Backlight</string>
    <string name="buttons_backlight_">Capacitive Buttons Backlight:</string>
    <string name="gpu2d_max_freq_">GPU2D Max Freq:</string>
    <string name="gpu3d_max_freq_">GPU3D Max Freq:</string>
    <string name="cpu0_governor_">CPU0 Governor:</string>
    <string name="cpu1_governor_">CPU1 Governor:</string>
    <string name="cpu2_governor_">CPU2 Governor:</string>
    <string name="cpu3_governor_">CPU3 Governor:</string>
     <string name="activity_main_up_time_">Up&#8211;time:</string>
    <string name="activity_main_deep_sleep_">Deep sleep:</string>
   <string name="activity_main_sweep2wake_">Sweep2Wake:</string>
    <string name="activity_main_cpu1_on_off">CPU1 on/off</string>
    <string name="activity_main_cpu2_on_off">CPU2 on/off</string>
    <string name="activity_main_cpu3_on_off">CPU3 on/off</string>
    <string name="activity_gpu_3d_max_freq_">3D max freq:</string>
    <string name="mhz">Mhz</string>
    <string name="activity_gpu__2d_max_freq_">2D max freq:</string>
    <string name="activity_gpu_current_3d_frequency_">Current 3D frequency:</string>
    <string name="activity_gpu_current_2d_frequency_">Current 2D frequency:</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="fastcharge">Fastcharge</string>
    <string name="enable_disable_fastcharge_mod">Enable/Disable Fastcharge Mod</string>
    <string name="vsync">Vsync</string>
    <string name="enable_disable_vsync">Enable/Disable Vsync</string>
    <string name="question_mark">\?</string>
    <string name="color_depth">Color Depth:</string>
    <string name="io_scheduler_">IO Scheduler:</string>
    <string name="sd_cache_size_">SD Cache Size:</string>
    <string name="led_notofications_timeout">LED Notofications Timeout</string>
    <string name="unlimited">Unlimited</string>
    <string name="application_default">Application Default</string>
    <string name="app_default_custom_multiplier">App default * custom multiplier</string>
    <string name="sweep2wake_">Sweep2Wake:</string>
    <string name="s2w_start_button_">S2W Start Button;</string>
    <string name="s2w_end_button_">S2W End Button:</string>
    <string name="apply">Apply</string>
    <string name="mpdecision">Mpdecision</string>
    <string name="service_start_delay_">Service start delay:</string>
    <string name="sleep_time_">Sleep time:</string>
    <string name="up_threshold_load_">Up threshold(load):</string>
    <string name="up_threshold_time_">Up threshold(time):</string>
    <string name="down_threshold_load_">Down threshold(load):</string>
    <string name="down_threshold_time_">Down threshold(time):</string>
    <string name="max">max</string>
    <string name="min">min</string>
     <string name="profile_name">Profile Name</string>
    <string name="number_of_active_cores_">Number of active Cores:</string>
    <string name="mpdecision_threshold_up_">Mpdecision threshold up:</string>
    <string name="mpdecision_threshold_down_">Mpdecision threshold down:</string>
    <string name="done">Done</string>
    <string name="profile_">Profile:</string>
    <string name="create_profile_from_current_settings">Create profile from current settings</string>
    <string name="phase1_low">THRESHOLD &#8211; LOW</string>
    <string name="max_frequency_">Max Frequency:</string>
    <string name="low_range_temperature_">Low range temperature:</string>
    <string name="high_range_temperature_">High range temperature:</string>
    <string name="phase2_medium">THRESHOLD &#8211; MEDIUM</string>
    <string name="phase3_high">THRESHOLD &#8211; HIGH</string>
    <string name="frequency_">Frequency:</string>
    <string name="all_p12_5mv">All +12.5mV</string>
    <string name="all_m12_5mv">All &#8211;12.5mV</string>
    <string name="governor_">Governor</string>
    <string name="buttons_n_light">Button Light</string>
    <string name="fast_ncharge">Fastcharge</string>
    <string name="color_n_depth">Color Depth</string>
    <string name="temperature_">Temperature:</string>
     <string name="temp">Temp</string>
    <string name="voltage_">Voltage:</string>
    <string name="technology_">Technology:</string>
    <string name="drain_charge_">Drain/Charge:</string>
    <string name="health_">Health:</string>
    <string name="capacity_">Capacity:</string>
    <string name="swap_size">Swap Size(MB)</string>
    <string name="swap_location">Swap file location</string>
    <string name="swappiness">Swappiness</string>
    <string name="create_swap">Create Swap File</string>
    <string name="activate_swap">Activate Swap</string>
    <string name="swap_status">Swap Status</string>
    <string name="delete_swap">Delete Swap File</string>
       <string name="deactivate_swap">Deactivate Swap</string>
     <string name="set_swappiness">Set Swappiness</string>
     <string name="cpu_load">CPU Load:</string>
     <string name="refresh">Refresh</string>
     <string name="load">Load</string>
     <string name="thermald">Thermal</string>
     <string name="profiles">Profiles</string>
     <string name="swap">Swap</string>
     <string name="info">System Info</string>
     <string name="ok">OK</string>
	<string name="uptime_">Up&#8211;time:</string>
	<string name="deep_sleep_">Deep Sleep:</string>
	<string name="system_dump_text1">This will dump all system information needed for this application to work in a file on your sdcard.\n\n
		\'/sdcard/ktuner_log.txt\'\n\n
		This information can help me improve application and add support for new devices\n\n
		Do you want to cotinue?</string>
		<string name="system_dump_text2">No private date will be collected!</string>
		<string name="clear">Clear</string>
		<string name="delete">Delete</string>
	<string name="plugin_name">Kernel Tuner &#8211; Profiles</string>
	<string name="voltage_profile">Voltage Profile</string>
	<string name="cpu_">CPU:</string>
	<string name="gpu_">GPU:</string>
	<string name="other_">Other:</string>
	<string name="capacitive_buttons_light_level_0_60_">Capacitive Buttons Light Level(0&#8211;60):</string>
	<string name="color_depth_">Color Depth:</string>
	<string name="sd_card_cache">SD Card Cache Size:</string>
	<string name="link_cpus">Link Cores(All frequencies will change together)</string>
	<string name="off">OFF</string>
	<string name="on">ON</string>
	<string name="dim">DIM</string>
	<string name="bright">BRIGHT</string>
	<string name="version">version: </string>
	<string name="dialog_title">Please wait&#8230;</string>
	<string name="enabling_cpus">Enabling all CPUs&#8230;\nPlease wait..</string>
	<string name="save">Save</string>
</resources>