<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/misc" >

    <PreferenceCategory android:title="@string/preferences_boot_settings" >
        <ListPreference
            android:entries="@array/listDisplayWord"
            android:entryValues="@array/listReturnValue"
            android:key="boot"
            android:summary="@string/preferences_boot_settings_apply_summary"
            android:title="@string/preferences_boot_settings_apply_title"
			android:defaultValue="boot"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_widget_settings" >
        <EditTextPreference
            android:defaultValue="30"
            android:key="widget_time"
            android:summary="@string/preferences_widget_settings_interval_summary"
            android:title="@string/preferences_widget_settings_interval_title" />
    </PreferenceCategory>
      <PreferenceCategory android:title="@string/preferences_cpu" >
          
			
		  <ListPreference
			  android:entries="@array/tisNames"
			  android:entryValues="@array/tisValues"
			  android:key="tis_open_as"
			  android:summary=""
			  android:title="Show Times in State As" 
			  android:defaultValue="ask"/>
           </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_misc" >
          <CheckBoxPreference
            android:defaultValue="true"
            android:key="ads"
            android:summary="@string/preferences_misc_ads_summary"
            android:title="@string/preferences_misc_ads_title" />
  
        <ListPreference
            android:entries="@array/tempTitles"
            android:entryValues="@array/tempValues"
            android:key="temp"
            android:summary="Temperature Unit"
            android:title="Temperature Unit" 
            android:defaultValue="celsius"/>
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="reset"
            android:summary="Reset all settings after flashing new kernel"
            android:title="Reset App after flashing new kernel" />
        
         </PreferenceCategory>

    
</PreferenceScreen>
