<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		<ImageView
        	android:id="@+id/imageView4"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:scaleType="fitXY"
        	android:src="@drawable/divider_strong_holo" />
      
        <LinearLayout
            android:id="@+id/cpu0min"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu0_min_freq_" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cpu0max"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu0_max_freq_" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cpu1min"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu1_min_freq_" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cpu1max"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu1_max_freq_" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cpu2min"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu2_min_freq_" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cpu2max"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu2_max_freq_" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cpu3min"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu3_min_freq_" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cpu3max"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu3_max_freq_" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cpu0gov"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cpu0_governor_"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/cpu1gov"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cpu1_governor_"
                 android:layout_weight="1" />

            <TextView
                android:id="@+id/tv10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/cpu2gov"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cpu2_governor_"
                 android:layout_weight="1" />

            <TextView
                android:id="@+id/tv11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/cpu3gov"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cpu3_governor_" 
                 android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        
               
        
        <LinearLayout
            android:id="@+id/voltage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/voltage_profile"
                  android:layout_weight="1" />

            <TextView
                android:id="@+id/tv13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />

        </LinearLayout>
               
        <LinearLayout
            android:id="@+id/mpup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mpdecision_threshold_down_" />

            <TextView
                android:id="@+id/tv14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

              
           

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/mpdown"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mpdecision_threshold_up_" />

            <TextView
                android:id="@+id/tv15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        
		<ImageView
        	android:id="@+id/imageView1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:scaleType="fitXY"
        	android:src="@drawable/divider_strong_holo" />
      
        <LinearLayout
            android:id="@+id/gpu2d"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
             <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gpu2d_max_freq_"
                  android:layout_weight="1" />

            <TextView
                android:id="@+id/tv16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/gpu3d"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
             <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gpu3d_max_freq_"
                  android:layout_weight="1" />

            <TextView
                android:id="@+id/tv17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
        </LinearLayout>
        
               
		<ImageView
        	android:id="@+id/imageView2"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:scaleType="fitXY"
        	android:src="@drawable/divider_strong_holo" />
       

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
             <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/capacitive_buttons_light_level_0_60_" />

            <TextView
                android:id="@+id/tv18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              />
        </LinearLayout>
               
        
               <LinearLayout
            android:id="@+id/vsync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

             <TextView
                
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/vsync" />

            <TextView
                android:id="@+id/tv19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>
                   
                   
        
               <LinearLayout
            android:id="@+id/fcharge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

             <TextView
                 
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/fastcharge" />

            <TextView
                android:id="@+id/tv20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
                   
                
                
                <LinearLayout
                    android:id="@+id/cdepth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
             <TextView
                
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/color_depth_"
                  android:layout_weight="1" />

            <TextView
                android:id="@+id/tv21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
        </LinearLayout>
       
                 <LinearLayout
                     android:id="@+id/io"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
             <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/io_scheduler_"
                  android:layout_weight="1" />

            <TextView
                android:id="@+id/tv22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
        </LinearLayout>
       
         <LinearLayout
             android:id="@+id/sd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
             <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sd_card_cache"
                  android:layout_weight="1" />

            
           <TextView
                android:id="@+id/tv23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>
        
         <LinearLayout
             android:id="@+id/s2w"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
             <TextView
                android:id="@+id/textView21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sweep2wake_"
                  android:layout_weight="1" />

            <TextView
                android:id="@+id/tv24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
        </LinearLayout>
        
		<ImageView
        	android:id="@+id/imageView3"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:scaleType="fitXY"
        	android:src="@drawable/divider_strong_holo" />
				 
    </LinearLayout>

</ScrollView>
